--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,10 @@ dependencies = [
     "python-multipart>=0.0.6",
     "aiofiles>=23.2.1",
     "google-generativeai>=0.3.0",
-    "langgraph>=0.0.40",
-    "langchain>=0.1.0",
-    "langchain-google-genai>=0.0.6",
+    "langgraph>=0.2.0",
+    "langchain>=0.3.0",
+    "langchain-core>=0.3.0",
+    "langchain-google-genai>=2.0.0",
     "radon>=6.0.1",
     "bandit>=1.7.5",
     "esprima>=4.0.1",
@@ -23,6 +24,7 @@ dependencies = [
     "rich>=13.7.0",
     "gitpython>=3.1.40",
     "python-dotenv>=1.0.0",
+    "openai>=1.35.3",
 ]
 
 [build-system]
