--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "gitpython>=3.1.40",
     "python-dotenv>=1.0.0",
     "openai>=1.35.3",
+    "notion-client>=2.5.0",
 ]
 
 [build-system]
