--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "openai>=1.35.3",
     "notion-client>=2.5.0",
+    "aiohttp>=3.12.15",
 ]
 
 [build-system]
