--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "code-quality-frontend",
+  "name": "cq-lite-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -22,7 +23,8 @@
     "lucide-react": "^0.294.0",
     "axios": "^1.6.0",
     "react-syntax-highlighter": "^15.5.0",
-    "@types/react-syntax-highlighter": "^15.5.0"
+    "@types/react-syntax-highlighter": "^15.5.0",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "eslint": "^8",
