--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "openai>=1.35.3",
     "notion-client>=2.5.0",
     "aiohttp>=3.12.15",
+    "chromadb",
 ]
 
 [build-system]
