--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: cq-lite-backend
+    name: cq-lite
     env: python
     buildCommand: uv add -r requirements.txt
     startCommand: uvicorn api.main:app --host 0.0.0.0 --port $PORT
